--- a/sites/all/themes/slac/sass/components/_calendar-overlap.scss
+++ b/sites/all/themes/slac/sass/components/_calendar-overlap.scss
@@ -303,7 +303,7 @@
 
 .calendar-calendar .day-view .full td.multi-day div.dayview,
 .calendar-calendar .week-view .full td.multi-day div.weekview {
-  width: 98%;
+  width: 100%;
   padding: 0;
   margin: 0;
   min-height: 110px;
